[package]
name = "adventure"
version = "0.1.0"
edition = "2021"

[dependencies]
async-openai = "0.10.3"
iced = "0.9.0"
iced_aw = "0.5.2"
iced_native = "0.10.3"
reqwest = { version = "0.11.17", features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }
thiserror = "1.0.40"
tiktoken-rs = "0.4.2"
tokio = { version = "1.28.1", features = ["full"] }
toml = "0.7.3"
